# ncnn-webassembly-ocrlite

./: .gitignore  CMakeLists.txt  README.md
demo/: OcrLiteNcnnWasm.js  OcrLiteNcnnWasm.wasm  arknights.html  index.html
include/: AngleNet.h  CrnnNet.h  OcrLite.h  OcrStruct.h  OcrUtils.h  main.h
src/: AngleNet.cpp  CrnnNet.cpp  OcrLite.cpp  OcrUtils.cpp  main.cpp
